2005-02-23 Derek Price <derek@ximbiot.com>

	* annotate.c (annotate), ls.c (ls): Handle -r<tag>:<date>.

2005-02-23 Derek Price <derek@ximbiot.com>

	* diff.c: Some reformatting.
	(diff): Handle -r<tag>:<date>.
	* sanity.sh (tagdate-13b): New test.

2005-02-23 Derek Price <derek@ximbiot.com>

	* checkout.c (checkout): Use parse_tagdate.
	* tag.c (tag_check_valid_join): Remove this function.
	* cvs.h (tag_check_valid_join): Ditto for the proto.
	(parse_tagdate): New proto.
	(Make_Date): Make arg const.
	* main.c (Make_Date): Ditto.
	(parse_tagdate): New function.
	* update.c (date_rev1, date_rev2): Rename these globals...
	(join_date1, join_date2): ...to this.
	(update): Use parse_tagdate.
	(do_update): Use new API.
	* update.h (do_update): Update proto.
	* sanity.sh: Misc reformatting.
	(tagdate-12): This test now passes.
	(tagdate-12b): New test.
	(multiroot-9a): Handle new TRACE.

2005-02-23 Derek Price <derek@ximbiot.com>

	* rsh-client.c (start_rsh_server): Update comment.  Replace
	malloc/sprintf combo with a call to Xasprintf.

2005-02-22 Derek Price <derek@ximbiot.com>

	* error.c (error): Handle unsigned int format char.
	* parseinfo.c (parse_error): New function.
	(parse_config): Keep track of line number and output it in error
	messages.
	* rcs.c (RCS_setlocalid): Accept file path and line number for error
	messages.  Add header comment block.
	* rcs.h (RCS_setlocalid): Update prototype to match.
	* parseinfo.h (parse_error): Declare new function.
	* sanity.sh: Accept new --noredirect argument.
	(checklongoptarg): Accept longoptmode as an argument
	rather than via an environment variable.
	(notnoredirect): New function.
	(newroot): Handle root options.
	(keywordexpand, config): Skip in noredirect mode.  Update for new
	config error messages.
	(multiroot): Some reformatting.
	(writeproxy, writeproxy-noredirect): Skip in noredirect mode.
	(commit, writeproxy-noredirect): Quote CVSROOT arguments since they
	might contain semicolons.
